{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 122,
  "lineage": "c5f06939-5258-1b81-7fd8-03ed86c59662",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:613018461546:internet-gateway/igw-0bd759bb33d5159af",
            "id": "igw-0bd759bb33d5159af",
            "owner_id": "613018461546",
            "vpc_id": "vpc-048c016b61e693167"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:613018461546:security-group/sg-087e61026a5c741be",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow cluster API Server to communicate with the worker nodes",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-077b8b3aaf06399d2"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-087e61026a5c741be",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow worker nodes to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-077b8b3aaf06399d2"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eks-cluster-scalegrid-demo-sg",
            "name_prefix": "",
            "owner_id": "613018461546",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-cluster-scalegrid-demo-sg"
            },
            "tags_all": {
              "Name": "eks-cluster-scalegrid-demo-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-048c016b61e693167"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:613018461546:security-group/sg-077b8b3aaf06399d2",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-077b8b3aaf06399d2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow nodes to communicate with each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-087e61026a5c741be"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "scalegrid-demo-node-sg",
            "name_prefix": "",
            "owner_id": "613018461546",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "scalegrid-demo-node-sg",
              "kubernetes.io/cluster/eks-cluster-scalegrid-demo": "owned"
            },
            "tags_all": {
              "Name": "scalegrid-demo-node-sg",
              "kubernetes.io/cluster/eks-cluster-scalegrid-demo": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-048c016b61e693167"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker nodes to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-1338499498",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-087e61026a5c741be",
            "security_group_rule_id": "sgr-0beb0fdf2b28d651a",
            "self": false,
            "source_security_group_id": "sg-077b8b3aaf06399d2",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow cluster API Server to communicate with the worker nodes",
            "from_port": 1024,
            "id": "sgrule-3784086674",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-087e61026a5c741be",
            "security_group_rule_id": "sgr-0465f7ddda2375daf",
            "self": false,
            "source_security_group_id": "sg-077b8b3aaf06399d2",
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate with each other",
            "from_port": 0,
            "id": "sgrule-500399241",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-077b8b3aaf06399d2",
            "security_group_rule_id": "sgr-011f039e11286418a",
            "self": false,
            "source_security_group_id": "sg-077b8b3aaf06399d2",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_nodes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-2315416433",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-077b8b3aaf06399d2",
            "security_group_rule_id": "sgr-0bfb0cf45dfb7bcec",
            "self": false,
            "source_security_group_id": "sg-087e61026a5c741be",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:613018461546:vpc/vpc-048c016b61e693167",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c962d2570e0d58e2",
            "default_route_table_id": "rtb-07db37c916c53001a",
            "default_security_group_id": "sg-0287ba11b0b33fed5",
            "dhcp_options_id": "dopt-08872703072813021",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-048c016b61e693167",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07db37c916c53001a",
            "owner_id": "613018461546",
            "tags": {
              "Name": "vpc-scalegrid-demo-demo",
              "kubernetes.io/cluster/eks-cluster-scalegrid-demo": "shared"
            },
            "tags_all": {
              "Name": "vpc-scalegrid-demo-demo",
              "kubernetes.io/cluster/eks-cluster-scalegrid-demo": "shared"
            }
          }
        }
      ]
    }
  ]
}